# json-to-typescript-interfaces

./: README.md  example.json  pyproject.toml
json_to_ts/: __init__.py  main.py
tests/: test_json_to_ts.py
