[tool.poetry]
name = "json_to_ts"
version = "0.1.0"
description = "JSON to TypeScript Interfaces"
authors = ["Douglas Gusson <douglasgusson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
